--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
           ></a>
         </div>
         <div class="closing">
-          This project was coded by Alesia Shope and is opem-sourced on
+          This project was coded by Alesia Shope and is open-sourced on
           <a
             class="closing"
             href="https://github.com/avsangel/class3-week2homework"
