--- a/about.html
+++ b/about.html
@@ -176,7 +176,7 @@
             <div class="card" style="width: 18rem">
               <div class="card-body">
                 <h5 class="card-title">Alesia Shope</h5>
-                <h6 class="card-subtitle mb-2 text-body-secondary-primary">
+                <h6 class="card-subtitle mb-2 text-body-secondary">
                   Front End Developer
                 </h6>
                 <p class="card-text">
@@ -242,7 +242,7 @@
           ></a>
         </div>
         <div class="closing">
-          This project was coded by Alesia Shope and is opem-sourced on
+          This project was coded by Alesia Shope and is open-sourced on
           <a
             class="closing"
             href="https://github.com/avsangel/class3-week2homework"
