added travel page to my portfolio

--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
         <div class="row">
           <div class="col-md-6 pics">
             <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/736/original/Screenshot_2023-12-30_at_4.00.14_PM.png?1703973641"
-              alt="screenshot of my tamale site"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/973/original/Screenshot_2024-02-11_at_1.40.02_PM.png?1707680556"
+              alt="screenshot of my monument site"
               class="img-fluid rounded d-none d-lg-block"
             />
           </div>
@@ -221,14 +221,15 @@
             <div>
               <div class="card" style="width: 18rem var(--text-align)">
                 <div class="card-body">
-                  <h5 class="card-title">Tamale site</h5>
+                  <h5 class="card-title">Monument Travel Landing Page</h5>
                   <p class="card-text">
-                    I used HTML, CSS, and Javascript to build this site.
+                    This is a responsive site I created with html, css, embeds,
+                    cards, and grids.
                   </p>
                   <button class="btn about-button" type="submit">
                     <a
-                      href="https://mylovetamales.netlify.app"
-                      title="Tamale site"
+                      href="https://bluffs.netlify.app"
+                      title="Monument Travel Site"
                       target="_blank"
                       class="card-link"
                       >Launch</a
