--- a/projects.html
+++ b/projects.html
@@ -81,10 +81,19 @@
       }
       .grid {
         display: grid;
-        grid-gap: 64px;
+        grid-gap: 30px;
       }
       .grid-2-columns {
         grid-template-columns: 1fr 1fr;
+      }
+      .card-header {
+        padding-top: 100px;
+      }
+      @media (max-width: 960px) {
+        .grid {
+          grid-template-columns: 1fr;
+          grid-gap: 32px;
+        }
       }
     </style>
   </head>
@@ -141,6 +150,45 @@
       </header>
       <h1>My Completed Projects</h1>
       <br />
+      <div class="grid grid-2-columns">
+        <div class="col">
+          <div class="card">
+            <div class="card-header">
+              <img
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/973/original/Screenshot_2024-02-11_at_1.40.02_PM.png?1707680556"
+                alt="screenshot of Monument Travel Page"
+                class="img-fluid rounded"
+              />
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Monument Travel page</h5>
+              <p class="card-text">
+                I created this landing page as a tribute to a place I will
+                always call home. This is a responsive site I created with html,
+                css, embeds, cards, and grids.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/994/original/Screenshot_2024-02-11_at_4.43.10_PM.png?1707691469"
+              alt="screenshot of a cleaning site"
+              class="img-fluid rounded"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Cleaning Site Page</h5>
+              <p class="card-text">
+                I built this site for a client who needed a website for her
+                cleaning business. I used HTML, CSS, and bootstrap to build this
+                responsive site.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="container">
         <div class="row row-cols-1 row-cols-md-2 g-4">
           <div class="col">
@@ -211,45 +259,7 @@
           </div>
         </div>
       </div>
-      <hr />
-      <div class="grid grid-2-columns">
-        <div class="col">
-          <div class="card">
-            <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/973/original/Screenshot_2024-02-11_at_1.40.02_PM.png?1707680556"
-              alt="screenshot of Monument Travel Page"
-              class="img-fluid rounded"
-              height="100px"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Monument Travel page</h5>
-              <p class="card-text">
-                This is a responsive site I created with html, css, embeds,
-                cards, and grids.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/730/original/Screenshot_2023-12-17_at_8.34.24_PM.png?1703971126"
-              alt="screenshot of weather site"
-              class="img-fluid rounded"
-              height="100px"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Weather Page</h5>
-              <p class="card-text">
-                I used HTML, CSS, and Javascript to build this site. I also used
-                an integrated weather API. On load this site has current info
-                for Lincoln, Nebraska but once you enter a city the page changes
-                based on that citys current information.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
+
       <footer>
         <div class="email mb-3">alesianicoleg@gmail.com</div>
         <div class="socials">
