--- a/index.html
+++ b/index.html
@@ -248,15 +248,15 @@
             <div>
               <div class="card" style="width: 18rem var(--text-align)">
                 <div class="card-body">
-                  <h5 class="card-title">Crafting</h5>
+                  <h5 class="card-title">AI Poem Generator</h5>
                   <p class="card-text">
-                    I used HTML, CSS, CSS grid, transitions, and Javascript to
-                    build this site.
+                    I used HTML, CSS, Javascript, AI, and API to build this AI
+                    Poem Generator. This project was so fun. I loved it
                   </p>
                   <button class="btn about-button" type="submit" class="launch">
                     <a
-                      href="https://my-crafts.netlify.app"
-                      title="my-crafts site"
+                      href="https://poem-ai-week2.netlify.app"
+                      title="my AI Poem Generator site"
                       target="_blank"
                       class="card-link"
                       >Launch</a
@@ -268,8 +268,8 @@
           </div>
           <div class="col-md-6 pics">
             <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/734/original/Screenshot_2023-12-30_at_3.53.20_PM.png?1703973229"
-              alt="screenshot of my crafts site"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/158/553/original/Screenshot_2025-02-23_at_1.21.50%E2%80%AFPM.png?1740362777"
+              alt="screenshot of my ai poem Generator site"
               class="img-fluid rounded d-none d-lg-block"
             />
           </div>
