--- a/about.html
+++ b/about.html
@@ -193,8 +193,8 @@
           </div>
           <div class="col-6">
             <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/110/768/original/416123724_10108477079566583_892026255370384064_n.jpeg?1705348170"
-              alt="Me in a vegas knights jersey"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/158/554/original/Screenshot_2025-02-23_at_8.27.13%E2%80%AFPM.png?1740364054"
+              alt="Me at MODO"
               class="img-fluid"
             />
           </div>
