--- a/about.html
+++ b/about.html
@@ -180,10 +180,14 @@
                   Front End Developer
                 </h6>
                 <p class="card-text">
-                  I am a single mom just trying to provide the best life for my
-                  son. My hobbies include: my etsy shop, crafting, gaming,
-                  biking, reading, Jouarnaling, watching hockey, and sports
-                  betting!
+                  Just a lady from Nebraska who has fallen in love with coding
+                  and creating cool sites.
+                  <br />
+                  My degrees are in Pschology, Mediation and Negotiation, and
+                  Now Front End Web Developer.
+                  <br />
+                  My hobbies include: my etsy shop, crafting, gaming, biking,
+                  reading, Jouarnaling, watching hockey, and sports betting!
                 </p>
                 <button type="button" class="btn btn-pink contact-button">
                   <a href="projects.html" title="Projects"> See My Projects</a>
