--- a/about.html
+++ b/about.html
@@ -180,14 +180,21 @@
                   Front End Developer
                 </h6>
                 <p class="card-text">
-                  Just a lady from Nebraska who has fallen in love with coding
+                  <p>
+  Just a lady from Nebraska who has fallen in love with coding
                   and creating cool sites.
-                  <br />
-                  My degrees are in Pschology, Mediation and Negotiation, and
+                  </p>
+                  <br>
+                <p>My degrees are in Pschology, Mediation and Negotiation, and
                   Now Front End Web Developer.
+                </p>
                   <br />
+                  
+                  <p>
                   My hobbies include: my etsy shop, crafting, gaming, biking,
                   reading, Jouarnaling, watching hockey, and sports betting!
+                  </p>
+                  <br>
                 </p>
                 <button type="button" class="btn btn-pink contact-button">
                   <a href="projects.html" title="Projects"> See My Projects</a>
