--- a/about.html
+++ b/about.html
@@ -191,7 +191,7 @@
                   <br />
                   
                   <p>
-                  My hobbies include: my etsy shop, crafting, gaming, biking,
+                  My hobbies include: crafting and working on my ETSY Shop, working on my Youtube Channels, gaming, biking,
                   reading, Jouarnaling, watching hockey, and sports betting!
                   </p>
                   <br>
