--- a/contact.html
+++ b/contact.html
@@ -159,13 +159,37 @@
           >alesiascodingjourney</a
         >
       </p>
-      <h2>Youtube</h2>
+      <p>
+        <a
+          href="https://www.instagram.com/turacocreations/"
+          target="_blank"
+          title="Turaco Creations"
+          >Turaco Creations</a
+        >
+      </p>
+      <h2>YouTube</h2>
       <p>
         <a
           href="https://www.youtube.com/@Alesias-Coding-Journey"
           target="_blank"
-          title="my coding youtube"
+          title="my coding Journy YouTube"
           >alesiascodingjourney
+        </a>
+      </p>
+      <p>
+        <a
+          href="https://www.youtube.com/@turacocreations"
+          target="_blank"
+          title="Turaco Creations"
+          >Turaco Creations
+        </a>
+      </p>
+      <p>
+        <a
+          href="https://www.youtube.com/@Lunchwalks"
+          target="_blank"
+          title="Lunch Walks & Design Finds"
+          >Lunch Walks & Design Finds
         </a>
       </p>
       <h2>Etsy</h2>
