--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
         <div class="row">
           <div class="col-md-6 pics">
             <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/973/original/Screenshot_2024-02-11_at_1.40.02_PM.png?1707680556"
-              alt="screenshot of my monument site"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/158/558/original/Screenshot_2025-02-23_at_10.34.03%E2%80%AFPM.png?1740371658"
+              alt="screenshot of my fav things site"
               class="img-fluid rounded d-none d-lg-block"
             />
           </div>
@@ -221,15 +221,17 @@
             <div>
               <div class="card" style="width: 18rem var(--text-align)">
                 <div class="card-body">
-                  <h5 class="card-title">Monument Travel Landing Page</h5>
+                  <h5 class="card-title">My Favorite Things</h5>
                   <p class="card-text">
-                    This is a responsive site I created with html, css, embeds,
-                    cards, and grids.
+                    I have enough of a following to be an Amazon Associate but
+                    not enough of a following to have my own Amazon Store front.
+                    So I built my own. This site is a mix between a storefront
+                    and a link tree.
                   </p>
                   <button class="btn about-button" type="submit">
                     <a
-                      href="https://bluffs.netlify.app"
-                      title="Monument Travel Site"
+                      href="https://my-fav-things.netlify.app"
+                      title="My Favorite Things"
                       target="_blank"
                       class="card-link"
                       >Launch</a
