--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-pink fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"> Alesia Shope</a>
+          <a class="navbar-brand" href="index.html"> Alesia Shope</a>
           <button
             class="navbar-toggler"
             type="button"
