--- a/projects.html
+++ b/projects.html
@@ -102,7 +102,7 @@
       <header>
         <nav class="navbar navbar-expand-lg navbar-pink fixed-top">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#"> Alesia Shope</a>
+            <a class="navbar-brand" href="index.html"> Alesia Shope</a>
             <button
               class="navbar-toggler"
               type="button"
