--- a/about.html
+++ b/about.html
@@ -186,7 +186,7 @@
                   </p>
                   <br>
                 <p>My degrees are in Pschology, Mediation and Negotiation, and
-                  Now Front End Web Developer.
+                  Now Front End Web Development.
                 </p>
                   <br />
                   
