--- a/blog.html
+++ b/blog.html
@@ -12,39 +12,27 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <meta name="description" content="contact me page of my portfolio" />
+    <meta
+      name="description"
+      content="Alesia Shope is a front end Developer based in Nebraska! Check out my projects and contact me."
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
       src="https://kit.fontawesome.com/01a116fc79.js"
       crossorigin="anonymous"
     ></script>
-    <title>About Me - Alesia Shope</title>
-    <meta name="description" content="about me page of my portfolio" />
-    <meta
-      name="description"
-      content="Alesia Shope is a front end Developer based in Nebraska! Check out my projects and contact me."
-    />
+    <title>Contact Page - Alesia Shope</title>
     <style>
       :root {
-        --primary-color: teal;
-        --secondary-color: rgb(255, 192, 239);
+        --primary-color: blue;
+        --secondary-color: #ee75b3;
         --text-align: center;
       }
-      body {
-        margin: 0 auto;
-        margin-top: 70px;
+      .navbar-pink {
+        background-color: lightpink;
       }
-       hr {
-        color: #ee75b3;
-        border: solid 3px;
-      }
-
-      p {
-        font-size: 18px;
-        line-height: 1.5;
-        color: #ee75b3;
-      }
-
       h1 {
         color: hsl(0 0% 100% / 0.2);
         background-clip: text;
@@ -53,63 +41,40 @@
         font-size: 70px;
         text-align: var(--text-align);
       }
-      h2 {
-        color: var(--secondary-color);
-        font-size: 35px;
-        text-align: var(--text-align);
-      }
-      h3 {
-        color: hsl(0 0% 100% / 0.2);
-        background-clip: text;
-        background-image: linear-gradient(pink, magenta, blue);olor);
-        font-weight: 600;
-        font-size: 60px;
-        text-align: var(--text-align);
-        padding: 0 0 0 0;
-        margin-bottom: 0%;
-      }
-      a {
-        margin: 0;
-        display: block;
-        text-align: center;
-        color: black;
-      }
-
-      .navbar-pink {
-        background-color: pink;
-      }
-      .huskers {
-        color: hsl(0 0% 100% / 0.2);
-        background-clip: text;
-        background-image: linear-gradient(black, silver, red);
-      }
-
-      .card{
+      .card {
         border: none;
-        text-align: center
+        text-align: center;
       }
-      .card-title{
-         color: hsl(0 0% 100% / 0.2);
-        background-clip: text;
-        background-image: linear-gradient(pink, magenta, blue);
+      .card-title {
         font-size: 30px;
       }
-      .contact-button {
-        background-color: pink;
-        border-radius: 10px;
-        font-size: 25px;
+      hr {
+        color: #ee75b3;
+        border: solid 3px;
       }
-        .email {
+      body {
+        margin-top: 70px;
+      }
+      h2 {
+        color: #ee75b3;
         text-align: center;
-         color: #ee75b3;
+      }
+      p {
+        text-align: center;
+      }
+      .email {
+        text-align: center;
+        color: #ee75b3;
+      }
+      .socials {
+        text-align: center;
       }
       .socials a {
         margin: 0 20px;
         font-size: 20px;
         color: #ee75b3;
-        display: inline-flex
       }
-      .closing{
+      .closing {
         color: #ee75b3;
         font-size: 15px;
         text-align: center;
@@ -146,7 +111,7 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" title="about" href="about.html">
+                  <a class="nav-link" title="about" href="about.html">
                     About Me</a
                   >
                 </li>
@@ -156,11 +121,11 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" title="contact" href="contact.html"
+                  <a class="nav-link active" title="contact" href="contact.html"
                     >Contact Me</a
                   >
                 </li>
-                 <li class="nav-item">
+                <li class="nav-item">
                   <a class="nav-link active" title="blog" href="blog.html"
                     >Blog</a
                   >
@@ -170,56 +135,16 @@
           </div>
         </nav>
       </header>
-      <h1>About Me</h1>
-      <h2>Front End Developer From <span class="huskers"> Nebraska</span></h2>
+      <h1>Blog</h1>
       <br />
-
-      <br />
-      <div class="container">
-        <div class="row">
-          <div class="col-6">
-            <div class="card" style="width: 18rem">
-              <div class="card-body">
-                <h5 class="card-title">Alesia Shope</h5>
-                <h6 class="card-subtitle mb-2 text-body-secondary">
-                  Front End Developer
-                </h6>
-                <p class="card-text">
-                  <p>
-  Just a lady from Nebraska who has fallen in love with coding
-                  and creating cool sites.
-                  </p>
-                  <br>
-                <p>My degrees are in Pschology, Mediation and Negotiation, and
-                  Now Front End Web Development.
-                </p>
-                  <br />
-                  
-                  <p>
-                  My hobbies include: crafting and working on my ETSY Shop, working on my Youtube Channels, gaming, biking,
-                  reading, Jouarnaling, watching hockey, and sports betting!
-                  </p>
-                  <br>
-                </p>
-                <button type="button" class="btn btn-pink contact-button">
-                  <a href="projects.html" title="Projects"> See My Projects</a>
-                </button>
-              </div>
-            </div>
-          </div>
-          <div class="col-6">
-            <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/158/554/original/Screenshot_2025-02-23_at_8.27.13%E2%80%AFPM.png?1740364054"
-              alt="Me at MODO"
-              class="img-fluid"
-            />
-          </div>
-        </div>
-      </div>
+<p>
+    <h2> blog</h2>
+    
+</p>
       <br />
       <footer>
         <div class="email mb-3">alesianicoleg@gmail.com</div>
-        <div class="socials text-center">
+        <div class="socials">
           <a
             href="https://github.com/avsangel"
             target="_blank"
