--- a/projects.html
+++ b/projects.html
@@ -143,6 +143,11 @@
                     >Contact Me</a
                   >
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link active" title="blog" href="blog.html"
+                    >Blog</a
+                  >
+                </li>
               </ul>
             </div>
           </div>
