--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       <h1>Hi, I am</h1>
       <h2>Alesia Shope</h2>
       <h3>
-        Front End Developer, based in
+        Website Designer, based in
         <div class="huskers">Nebraska!</div>
       </h3>
 
