added hire me page

--- a/offers.html
+++ b/offers.html
@@ -140,11 +140,12 @@
           </div>
         </nav>
       </header>
-      <h1>Blog</h1>
+      <h1>Hire Me</h1>
       <br />
 <p>
-    <h2> blog</h2>
-
+    <h2> Landing Page</h2>
+    I will build you a simple custom landing page for your business.
+   <a href="303-519-2281"> <button type="button">Contact me now to discuss your future page.</button></a>
 </p>
       <br />
       <footer>
