--- a/about.html
+++ b/about.html
@@ -155,6 +155,11 @@
                     >Projects</a
                   >
                 </li>
+                 <li class="nav-item">
+                  <a class="nav-link" title="offers" href="offers.html"
+                    >Hire Me</a
+                  >
+                </li>
                 <li class="nav-item">
                   <a class="nav-link" title="contact" href="contact.html"
                     >Contact Me</a
