--- a/contact.html
+++ b/contact.html
@@ -121,6 +121,11 @@
                   >
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link" title="offers" href="offers.html"
+                    >Hire Me</a
+                  >
+                </li>
+                <li class="nav-item">
                   <a class="nav-link active" title="contact" href="contact.html"
                     >Contact Me</a
                   >
