--- a/projects.html
+++ b/projects.html
@@ -139,6 +139,11 @@
                   >
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link" title="offers" href="offers.html"
+                    >Hire Me</a
+                  >
+                </li>
+                <li class="nav-item">
                   <a class="nav-link" title="contact" href="contact.html"
                     >Contact Me</a
                   >
