--- a/offers.html
+++ b/offers.html
@@ -144,8 +144,15 @@
       <br />
 <p>
     <h2> Landing Page</h2>
-    I will build you a simple custom landing page for your business.
-   <a href="303-519-2281"> <button type="button">Contact me now to discuss your future page.</button></a>
+    I will build you a simple custom landing page for your business. 
+</p>
+<p>
+    <h2>Custom RFID / NFC Keychains</h2>
+    I can make you custom keychains for your business!
+</p>
+<p>
+    <h2>Custom RFID / NFC business cards</h2>
+    I can make you custom nfc business cards for your business!
 </p>
       <br />
       <footer>
