--- a/about.html
+++ b/about.html
@@ -187,7 +187,7 @@
               <div class="card-body">
                 <h5 class="card-title">Alesia Shope</h5>
                 <h6 class="card-subtitle mb-2 text-body-secondary">
-                  Front End Developer
+                  Landing Page Creator 
                 </h6>
                 <p class="card-text">
                   <p>
