--- a/contact.html
+++ b/contact.html
@@ -140,7 +140,7 @@
           </div>
         </nav>
       </header>
-      <h1>Contact Me and Follow Me</h1>
+      <h1>Contact and Follow</h1>
       <br />
       <h2>Email</h2>
       <p>alesianicoleg@gmail.com</p>
