--- a/offers.html
+++ b/offers.html
@@ -60,7 +60,7 @@
         text-align: center;
       }
       p {
-        color: teal;
+        color: purple;
         text-align: center;
       }
       .email {
@@ -80,6 +80,12 @@
         font-size: 15px;
         text-align: center;
         text-decoration: none;
+      }
+      button {
+        background-color: whitesmoke;
+        color: pink;
+        display: block;
+        margin: 0 auto;
       }
     </style>
   </head>
@@ -121,7 +127,7 @@
                     >Projects</a
                   >
                 </li>
-                 <li class="nav-item">
+                <li class="nav-item">
                   <a class="nav-link" title="offers" href="offers.html"
                     >Hire Me</a
                   >
@@ -143,18 +149,20 @@
       </header>
       <h1>Hire Me</h1>
       <br />
-<p>
-    <h2> Landing Page</h2>
-    I will build you a simple custom landing page for your business. 
-</p>
-<p>
-    <h2>Custom RFID / NFC Keychains</h2>
-    I can make you custom keychains for your business!
-</p>
-<p>
-    <h2>Custom RFID / NFC business cards</h2>
-    I can make you custom nfc business cards for your business!
-</p>
+
+      <h2>Landing Page</h2>
+      <p>I will build you a simple custom landing page for your business.</p>
+      <button type="button" class=>
+        <a href="turacocreations.com" title="contact" target="_blank">
+          Hire Me</a
+        >
+      </button>
+
+      <h2>Custom RFID / NFC Keychains</h2>
+      <p>I can make you custom keychains for your business!</p>
+
+      <h2>Custom RFID / NFC business cards</h2>
+      <p>I can make you custom nfc business cards for your business!</p>
       <br />
       <footer>
         <div class="email mb-3">alesianicoleg@gmail.com</div>
