--- a/offers.html
+++ b/offers.html
@@ -153,7 +153,7 @@
       <h2>Landing Page</h2>
       <p>I will build you a simple custom landing page for your business.</p>
       <button type="button" class=>
-        <a href="turacocreations.com" title="contact" target="_blank">
+        <a href="https://turacocreations.com" title="Turaco" target="_blank">
           Hire Me</a
         >
       </button>
