--- a/offers.html
+++ b/offers.html
@@ -82,10 +82,14 @@
         text-decoration: none;
       }
       button {
-        background-color: whitesmoke;
-        color: pink;
+        background-color: pink;
+        color: black;
         display: block;
         margin: 0 auto;
+        padding: 10px;
+        border-radius: 10px;
+        font-size: 25px;
+        margin-bottom: 10px;
       }
     </style>
   </head>
@@ -160,9 +164,26 @@
 
       <h2>Custom RFID / NFC Keychains</h2>
       <p>I can make you custom keychains for your business!</p>
-
+<div class="socials">
+       <a
+            href="https://turacocreations.etsy.com/listing/1868852944"
+            target="_blank"
+            title="rfid nfc keychains"
+          >
+            <i class="fa-brands fa-etsy"></i
+          ></a>
+</div>
       <h2>Custom RFID / NFC business cards</h2>
       <p>I can make you custom nfc business cards for your business!</p>
+      <div class="socials">
+       <a
+            href="https://turacocreations.etsy.com/listing/1868856030"
+            target="_blank"
+            title="RFID NFC business cards"
+          >
+            <i class="fa-brands fa-etsy"></i
+          ></a>
+</div>
       <br />
       <footer>
         <div class="email mb-3">alesianicoleg@gmail.com</div>
