--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
           </div>
           <div class="col">
             <button type="button" class="btn about-button">
-              <a href="about.html" title="about page"> About </a>
+              <a href="offers.html" title="about page"> Hire Me </a>
             </button>
           </div>
         </div>
